# LS_API

./: .env  .gitignore  camera.py  gui.py  gui.spec  install_client.bat  install_client.sh  kivy-bundle.sh  logo.icns  main.py  manage.py  manage_django.py  migrations.sh  pyproject.toml  readme.md  requirements-manual.txt  requirements.txt  run.py  run_discord.py  run_django.py  run_flask.py  run_weblistener.py  run_webserver.py  serial_camera.py  serialcamera.kv  setup.cfg  sheets.googleapis.com-python.json  updateCustomerPhone.py  updateItemPrice.py  update_build.bat  update_build.sh  update_customer_phone.py  update_item_price.py  update_plpi.sh  update_requirements.sh
classes/: class_customer.py  class_item.py  google_mysql.py  google_sheets.py  ipsw_me_ipsw.py  ls_customer.py  ls_item.py  sickw_results.py
config/: config.json  devices.json
label_printer/: apps.py  models.py  urls.py  views.py
label_printer/templates/: about.html  base.html  index.html
modules/: att_unlock.py  camera.py  classCustomer.py  classItem.py  class_customer.py  class_item.py  connect.py  connect_google.py  connect_ls.py  connect_sickw.py  get_ipsws.py  json_editor.py  label_print.py  load_config.py  update_customer_phone.py  update_item_price.py  weblistener.py
shiny_api/: asgi.py  main.py  serial_camera.py  settings.py  urls.py  wsgi.py
shiny_api/applescript/: rc_search_by_number.applescript
shiny_api/classes/: api_serial.py  google_mysql.py  google_sheets.py  homeassistant.py  ipsw_me_ipsw.py  label_group.py  ls_client.py  ls_customer.py  ls_item.py  ls_workorder.py  phonecheck.py  shiny_client.py  shiny_item.py  sickw.py  sickw_results.py
shiny_api/config/: config.json  stunnel.ini
shiny_api/discord_cogs/: chatgpt_cog.py  discord_py_cog.py  label_cog.py  ls_cog.py  phonecheck_cog.py  setup_cog.py  sickw_cog.py  template_cog.py copy.template  trello_cog.py
shiny_api/django_server/: asgi.py  settings.py  urls.py  wsgi.py
shiny_api/django_server/api/: apps.py  urls.py  views.py
shiny_api/django_server/check_in/: apps.py  forms.py  urls.py  views.py
shiny_api/django_server/config/: apps.py  forms.py  models.py  urls.py
shiny_api/django_server/customers/: apps.py  forms.py  models.py  urls.py  views.py
shiny_api/django_server/inventory/: apps.py  forms.py  models.py  urls.py  views.py
shiny_api/django_server/label_printer/: apps.py  urls.py  views.py
shiny_api/django_server/ls_functions/: apps.py  consumers.py  routing.py  urls.py  views.py
shiny_api/django_server/serial_camera/: apps.py  consumers.py  routing.py  urls.py  views.py
shiny_api/django_server/sickw/: apps.py  urls.py  views.py
shiny_api/django_server/static/: pwa_sw.js  shiny.css
shiny_api/django_server/templates/: base.html  layout.django-html
shiny_api/django_server/workorders/: models.py  urls.py  views.py
shiny_api/modules/: att_unlock.py  connect_ls.py  discord_bot.py  django_server.py  flask_helpers.py  flask_server.py  get_ipsws.py  home_assistant.py  homeassistant.py  label_print.py  light_speed.py  load_config.py  ring_central.py  scroll.py  shiny_django.py  shiny_item_from_ls.py  shiny_networking.py  update_customer_phone.py  update_item_price.py  weblistener.py
shiny_api/modules/cogs/: chatgpt_cog.py  discord_py_cog.py  exception_handler.py  homeassistant_cog.py  label_cog.py  ls_cog.py  phonecheck_cog.py  setup_cog.py  sickw_cog.py  template_cog.py copy.template  template_cog.py.template  trello_cog.py
shiny_api/views/: api.py  label_printer.py  ls_functions.py  table_editor.py
shiny_api/views/templates/: about.jinja-html  close_window.html  error.jinja-html  labels.html  labels.jinja-html  layout.html  layout.jinja-html  ls_functions.html  ls_functions.jinja-html  table_age.jinja-html  table_devices.jinja-html  table_editor.jinja-html
shiny_api_old/: serial_camera.py
shiny_app/applescript/: rc_search_by_number.applescript
shiny_app/classes/: config.py  homeassistant.py  ls_client.py  ls_customer.py  ls_item.py  ls_sale.py  ls_serial.py  ls_serialized.py  ls_workorder.py  phonecheck.py  sickw.py
shiny_app/config/: config.json  devices.json
shiny_app/discord_cogs/: chatgpt_cog.py  discord_py_cog.py  homeassistant_cog.py  label_cog.py  ls_cog.py  phonecheck_cog.py  setup_cog.py  sickw_cog.py  trello_cog.py
shiny_app/django_apps/api/: views.py
shiny_app/django_apps/checklists/: admin.py  forms.py  models.py  urls.py  views.py
shiny_app/django_apps/customers/: admin.py  models.py  urls.py  views.py
shiny_app/django_apps/ebay/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
shiny_app/django_apps/functions/: routing.py  urls.py  views.py
shiny_app/django_apps/items/: admin.py  forms.py  models.py  urls.py  views.py
shiny_app/django_apps/sales/: admin.py  models.py  urls.py
shiny_app/django_apps/serial_camera/: consumers.py  routing.py  urls.py
shiny_app/django_apps/serials/: models.py  urls.py
shiny_app/django_apps/workorders/: admin.py  mixins.py  views.py
shiny_app/django_server/: asgi.py  settings.py  urls.py  wsgi.py
shiny_app/django_server/api/: views.py
shiny_app/django_server/check_in/: urls.py  views.py
shiny_app/django_server/config/: views.py
shiny_app/django_server/customers/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
shiny_app/django_server/functions/: routing.py  views.py
shiny_app/django_server/inventory/: models.py
shiny_app/django_server/items/: admin.py  forms.py  models.py  urls.py  views.py
shiny_app/modules/: discord_bot.py  django_server.py  label_print.py  light_speed.py  ring_central.py  scroll.py  shiny_django.py  shiny_networking.py
typings/kivy/uix/: button.pyi
(+151 files in other folders)
