[tool.poetry]
name = "shiny_api"
version = "0.2.83"
description = "Interface with LS and Camera Scanner"
authors = ["Chris Busillo <info@shinycomputers.com>"]
packages = [{include = "shiny_api"}]

[tool.poetry.dependencies]
python = "3.11.*"
selenium = "^4.8.2"
opencv-python = "^4.7.0.68"
pytesseract = "^0.3.10"
beautifulsoup4 = "^4.11.2"
discord = "^2.1.0"
py-trello = "^0.19.0"
numpi = "^0.3.1"
pandas = "^1.5.3"
openai = "^0.27.0"
simple-zpl2 = "^0.3.0"
homeassistant-api = "^4.1.0"
tabula-py = "^2.7.0"
rich = "^13.3.2"
django = "^4.1.7"
channels = "^4.0.0"
daphne = "^4.0.0"
channels-redis = "^4.1.0"
django-pwa = "^1.1.0"
django-extensions = "^3.2.1"
werkzeug = "^2.2.3"

[tool.poetry.group.dev.dependencies]
dotenv = {version = "^0.0.5", platform = "windows"}
python-dotenv = {version = "^0.21.1", platform = "darwin"}
pylint = "^2.17.1"
autopep8 = "^2.0.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
discord = "run_discord:start_discord_bot"
django = "run_django:start_django_server"
all = "run:main"

[tool.pyright]
exclude = ["**/homebrew/**"]
