[tool.poetry]
name = "shiny_app"
version = "0.2.83"
description = "Interface with LS and Camera Scanner"
authors = ["Chris Busillo <info@shinycomputers.com>"]
packages = [{include = "shiny_app"}]

[tool.poetry.dependencies]
python = "3.11.*"
selenium = "^4.8.2"
beautifulsoup4 = "^4.11.2"
discord = "^2.1.0"
py-trello = "^0.19.0"
openai = "^0.27.0"
simple-zpl2 = "^0.3.0"
homeassistant-api = "^4.1.0"
tabula-py = "^2.7.0"
rich = "^13.3.2"
django = "^4.1.7"
django-pwa = "^1.1.0"
django-extensions = "^3.2.1"
paramiko = "^3.1.0"
pillow = "^9.5.0"
crispy-bootstrap5 = "^0.7"
pylint-django = "^2.5.3"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.0.2"}
channels-redis = "^4.1.0"
daphne = "^4.0.0"
pytesseract = "^0.3.10"
opencv-python = "^4.7.0.72"
pytz = "^2023.3"
undetected-chromedriver = "^3.4.6"

[tool.poetry.group.dev.dependencies]
types-paramiko = "^3.0.0.6"
django-stubs = "^1.16.0"
types-requests = "^2.28.11.17"
pylint-django = "^2.5.3"
black = "^23.3.0"
djlint = "^1.19.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
discord = "run_discord:start_discord_bot"
django = "run_django:start_django_server"
all = "run:main"

