[metadata]
name = Shiny API
version = 0.0.14
author = Chris Busillo
author_email = info@shinycomputers.com
url = http://shinycomputers.com
description = Interface with LS and Camera Scanner


[options]
install_requires =
    grpcio-status
    setuptools
    virtualenv
    flask
    selenium
    cython
    pyinstaller
    opencv-python
    sqlalchemy
    scikit-image
    deskew
    matplotlib
    pytesseract
    kivy
    pygsheets
    pandas
    beautifulsoup4

zip_safe = True
include_package_data = False

[options.package_data]
shiny_api = 
    config/age.json
    config/config.json
    config/devices.json
* = README.md

[options.entry_points]
console_scripts = 
    shiny_api = shiny_api.main:start_gui
    shiny_serial_camera = shiny_api.serial_camera:start_gui

